--- a/ClientProject1/app/src/main/res/layout/activity_main.xml
+++ b/ClientProject1/app/src/main/res/layout/activity_main.xml
@@ -118,10 +118,12 @@
                 />
 
 
+
+
             <RelativeLayout
+                android:id="@+id/relative_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/text_show"
                 >
@@ -147,6 +149,16 @@
 
                     />
             </RelativeLayout>
+
+            <Button
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Task"
+                android:textSize="18dp"
+                android:layout_below="@+id/relative_layout"
+                android:onClick="OnNewTaskClick"
+                />
 
 
         </RelativeLayout>
